Implement processing steps for parsers and transforms with reordering capability
- Added `ProcessingStepService` to execute parser and transform configurations as a single ordered chain per message type.
- Introduced `ProcessingStepOrderRequest` DTO for reordering processing steps via API.
- Updated database migration to add `source_field` to parsers and create a unified priority order for processing steps.
- Enhanced unit tests for `ProcessingStepService` to validate execution order and handling of parser/transform failures.
- Documented the implementation plan for processing steps in `2026-08-26-logparser-processing-steps.md`.